Commit setup changes

--- a/InAndOut/Views/ExpenseType/Index.cshtml
+++ b/InAndOut/Views/ExpenseType/Index.cshtml
@@ -31,8 +31,8 @@
                     <td width="35%">@obj.Name</td>
                     <td width="30%">
                         <div class="w-100 btn-group" role="group">
-                            <a asp-controller="ExpenseType asp-action="Update" asp-route-Id="@obj.Id" class="btn btn-primary mx-1">Update</a>
-                            <a asp-controller="ExpenseType" asp-action="DeletePost" asp-route-Id="@obj.Id" class="btn btn-danger mx-1">Delete</a>
+                            <a asp-controller="ExpenseType" asp-action="Update" asp-route-Id="@obj.Id" class="btn btn-primary mx-1">Update</a>
+                            <a asp-controller="ExpenseType" asp-action="Delete" asp-route-Id="@obj.Id" class="btn btn-danger mx-1">Delete</a>
                         </div>
                     </td>
                 </tr>
