--- a/InAndOut/Views/ExpenseType/Update.cshtml
+++ b/InAndOut/Views/ExpenseType/Update.cshtml
@@ -15,7 +15,7 @@
                 </div>
                 <div class="form-group row">
                     <div class="col-6">
-                        <input asp-for="Name" disabled class="form-control" />
+                        <input asp-for="Name"  class="form-control" />
                     </div>
                 </div>
                 <div class="form-group row">
@@ -33,7 +33,8 @@
     </div>
 </form>
 
-@section Scripts{
+@section Scripts {
     @{
         <partial name="_ValidationScriptsPartial" />
+    }
 }
