--- a/InAndOut/Views/ExpenseType/Create.cshtml
+++ b/InAndOut/Views/ExpenseType/Create.cshtml
@@ -26,7 +26,7 @@
                             <input type="submit" class="btn btn-info w-75" value="Create" />
                         </div>
                         <div class="col">
-                            @* This is a code from the test branch *@
+                            @* This is a code from the master  branch *@
                             <a asp-action="Index" class="btn btn-danger w-75">Back</a>
                         </div>
                     </div>
